# mom

./: .gitignore  README.md  audio2text.py  instructions.py  main.py  pyproject.toml  services.py
prompts/: circle_meeting.md
tests/: test_audio2text.py  test_main.py  test_services.py
tests/fixtures/: text_test.txt
