[project]
name = "mom"
version = "0.1.0"
description = "Minutes of Meeting"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.5.10",
    "groq>=1.1.1",
    "ipdb>=0.13.13",
    "openai>=2.29.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "speechrecognition>=3.15.1",
    "typing-extensions>=4.15.0",
    "whisper>=1.1.10",
]
