[project]
name = "mom"
version = "0.1.0"
description = "Minutes of Meeting"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.5.10",
    "faster-whisper>=1.2.1",
    "groq>=1.1.1",
    "openai>=2.29.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = ["pytest>=8.3.0", "pytest-cov>=6.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--tb=short",
]

[tool.coverage.run]
omit = ["tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
